# QtService

./: .cmake.conf  .gitignore  .gitmodules  CMakeLists.txt  DEPLOY.md  README.md
examples/: CMakeLists.txt
examples/service/: CMakeLists.txt
examples/service/AndroidServiceTest/: AndroidServiceTest.pro  CMakeLists.txt  controlhelper.cpp  controlhelper.h  main.cpp  testservice.cpp  testservice.h
examples/service/AndroidServiceTest/android/: AndroidManifest.xml
examples/service/AndroidServiceTest/android/res/values/: libs.xml
examples/service/EchoControl/: CMakeLists.txt
examples/service/EchoService/: CMakeLists.txt
examples/service/TerminalService/: CMakeLists.txt  TerminalService.pro
scripts/: build_win.bat
src/java/src/de/skycoder42/qtservice/: AndroidService.java
src/plugins/servicebackends/android/: android.pro  androidservicebackend.cpp  androidservicebackend.h  androidservicecontrol.cpp  androidservicecontrol.h  androidserviceplugin.h
src/plugins/servicebackends/standard/: CMakeLists.txt  standardservicebackend.h  standardservicecontrol.h  standardserviceplugin.h
src/plugins/servicebackends/systemd/: CMakeLists.txt  systemdservicebackend.cpp  systemdservicebackend.h  systemdservicecontrol.h  systemdserviceplugin.h
src/plugins/servicebackends/windows/: CMakeLists.txt  windowsservicebackend.h  windowsservicecontrol.h  windowsserviceplugin.h
src/service/: CMakeLists.txt  qtservice_global.h  service.cpp  service.h  service.pro  servicebackend.h  servicecontrol.cpp  servicecontrol.h  serviceplugin.h  terminal.h  terminalclient.cpp
